--- a/Views/MediaPage.xaml
+++ b/Views/MediaPage.xaml
@@ -11,20 +11,14 @@
       xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="900"
-      Title="MediaPage" x:Name="window"
-      >
-
+      Title="MediaPage" x:Name="window">
+    
     <Grid x:Name="Aboba" ClipToBounds="True">
-        <i:Interaction.Triggers>
-            <i:EventTrigger EventName="MouseMove">
-                <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
-            </i:EventTrigger>
-        </i:Interaction.Triggers>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
             <ColumnDefinition Width="300"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        
+
         <ScrollViewer Grid.Column="0" VerticalScrollBarVisibility="Hidden">
             <Grid ClipToBounds="True">
                 <Grid.RowDefinitions>
@@ -33,7 +27,11 @@
                 </Grid.RowDefinitions>
 
                 <Grid ClipToBounds="True" x:Name="MediaGrid" Grid.Row="0" Margin="15" HorizontalAlignment="Left">
-                    
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseMove">
+                            <i:InvokeCommandAction Command="{Binding NavigateCommand}" CommandParameter="ViewImportProgress"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                     <Border ClipToBounds="True" x:Name="MediaEl" CornerRadius="20" Background="Black"
                             Height="{Binding Path=ActualHeight,ElementName=window,Converter={StaticResource ScreenRatioHeightConvert}}" 
                             Width="{Binding Path=ActualHeight,ElementName=window, Converter={StaticResource ScreenRatioConverter}}" >
