--- a/Views/MusicPage.xaml
+++ b/Views/MusicPage.xaml
@@ -110,15 +110,15 @@
                                                                 <ColumnDefinition></ColumnDefinition>
                                                             </Grid.ColumnDefinitions>
                                                             <Button Grid.Column="0" Background="Transparent" Command="{Binding ChangedRateSlow}">
-                                                                <Path x:Name="Arrow2"  Fill="{DynamicResource PrimaryForegroundBrush}" Data="M 0 0 L 4 4 L 8 0 Z">
+                                                                <Path x:Name="Arrow2"  Fill="Black" Data="M 0 0 L 4 4 L 8 0 Z">
                                                                     <Path.LayoutTransform>
                                                                         <RotateTransform Angle="90"></RotateTransform>
                                                                     </Path.LayoutTransform>
                                                                 </Path>
                                                             </Button>
-                                                            <TextBlock Grid.Column="1" HorizontalAlignment="Center" Text="{Binding Speed}"></TextBlock>
+                                                            <TextBlock Grid.Column="1" HorizontalAlignment="Center" Foreground="Black" Text="{Binding Speed}"></TextBlock>
                                                             <Button Grid.Column="2" Background="Transparent" Command="{Binding ChangedRate}">
-                                                                <Path x:Name="Arrow" Fill="{DynamicResource PrimaryForegroundBrush}" Data="M 0 0 L 4 4 L 8 0 Z">
+                                                                <Path x:Name="Arrow" Fill="Black" Data="M 0 0 L 4 4 L 8 0 Z">
                                                                     <Path.LayoutTransform>
                                                                         <RotateTransform Angle="-90"></RotateTransform>
                                                                     </Path.LayoutTransform>
