--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -26,6 +26,7 @@
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1.1*"></ColumnDefinition>
+                    <ColumnDefinition Width="auto"></ColumnDefinition>
                     <ColumnDefinition Width="3*"></ColumnDefinition>
                     <ColumnDefinition Width="0.5*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
@@ -36,8 +37,14 @@
                           ItemsSource="{Binding Mods}"
                           SelectedItem="{Binding SelectedMode}">
                 </ComboBox>
-                <local1:PlaceHolderTextBox Grid.Column="1" Style="{DynamicResource SearchBox}" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" PlaceHolderText="Введите запрос" BorderThickness="0"/>
-                <Image Grid.Column="2" Style="{DynamicResource Search Icon}" Height="26"/>
+                <ComboBox Style="{DynamicResource ComboBoxTest2}" Grid.Column="1"
+                          VerticalAlignment="Center" Margin="20 0 0 0" Width="160" 
+                          HorizontalAlignment="Left"
+                          ItemsSource="{Binding Mods}"
+                          SelectedItem="{Binding SelectedMode}">
+                </ComboBox>
+                <local1:PlaceHolderTextBox Grid.Column="2" Style="{DynamicResource SearchBox}" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" PlaceHolderText="Введите запрос" BorderThickness="0"/>
+                <Image Grid.Column="3" Style="{DynamicResource Search Icon}" Height="26"/>
             </Grid>
         </Border>
         <ProgressBar Grid.Row="1" Height="50" Width="200" Foreground="blue" Value="{Binding ProgVal}" Visibility="{Binding ProgVis}" Background="LightBlue">
