--- a/themes/dark.xaml
+++ b/themes/dark.xaml
@@ -7,6 +7,8 @@
     <Color x:Key="pwsSecondaryColor">#000000</Color>
     <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource pwsPrimaryColor}"/>
     <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource pwsSecondaryColor}"/>
+    <Color x:Key="SearchColor">#4CFFFFFF</Color>
+    <SolidColorBrush x:Key="SearchBrush" Color="{StaticResource SearchColor}"/>
 
     <Style x:Key="Background" TargetType="Grid">
         <Setter Property="Background">
