--- a/Views/ProfileView.xaml
+++ b/Views/ProfileView.xaml
@@ -30,6 +30,12 @@
                         </ComboBox>
                         <Separator VerticalAlignment="Bottom"/>
                     </Grid>
+                    <StackPanel Margin="0 10 0 0">
+                        <TextBlock Style="{DynamicResource TextStyle2}" VerticalAlignment="Center" TextWrapping="Wrap">
+                            О программе: Melista предназначена для проигрывания видео и аудио файлов.
+                        </TextBlock>
+                        <Separator Margin="0 5 0 0"/>
+                    </StackPanel>
                 </StackPanel>
             </Border>
             <Image Style="{DynamicResource owner}"></Image>
