--- a/Views/MusicPage.xaml
+++ b/Views/MusicPage.xaml
@@ -247,8 +247,8 @@
             </StackPanel>
             <Grid Grid.Row="1" x:Name="buttons" Style="{DynamicResource BottomPanel}" VerticalAlignment="Bottom">
                 <StackPanel HorizontalAlignment="Center" Width="{Binding ActualWidth, ElementName=buttons}" >
-                    <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" 
-                            Content="История" Margin="40 20"/>
+                    <!--<Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" 
+                            Content="История" Margin="40 20"/>-->
                     <Button Style="{DynamicResource ButtonOne}" Command="{Binding Back}"  Grid.Row="1" Height="40" 
                             Content="К музыке" Margin="40 0 40 20"/>
                 </StackPanel>
