--- a/Views/StartPageView.xaml
+++ b/Views/StartPageView.xaml
@@ -26,7 +26,7 @@
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.7*"></ColumnDefinition>
-                    <ColumnDefinition Width="0.7*"></ColumnDefinition>
+                    <!--<ColumnDefinition Width="0.7*"></ColumnDefinition>-->
                     <ColumnDefinition Width="3*"></ColumnDefinition>
                     <ColumnDefinition Width="0.5*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
@@ -37,16 +37,16 @@
                           ItemsSource="{Binding Mods}"
                           SelectedItem="{Binding SelectedMode}">
                 </ComboBox>
-                <ComboBox Style="{DynamicResource ComboBoxTest2}" Grid.Column="1"
+                <!--<ComboBox Style="{DynamicResource ComboBoxTest2}" Grid.Column="1"
                           VerticalAlignment="Center" Margin="20 0 0 0" Width="160" 
                           HorizontalAlignment="Left">
-                    <!--ItemsSource="{Binding Mods}"
-                          SelectedItem="{Binding SelectedMode}"-->
-                </ComboBox>
-                <Border Grid.Column="2"  Style="{DynamicResource SearchPanel}" Background="{DynamicResource SearchBrush}" CornerRadius="14" Height="30">
-                    <local1:PlaceHolderTextBox Margin="20 0" Style="{DynamicResource SearchBox}" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Foreground="White" BorderThickness="0"/>
+                    --><!--ItemsSource="{Binding Mods}"
+                          SelectedItem="{Binding SelectedMode}"--><!--
+                </ComboBox>-->
+                <Border Grid.Column="1"  Style="{DynamicResource SearchPanel}" Background="{DynamicResource SearchBrush}" CornerRadius="14" Height="30" BorderBrush="{DynamicResource PrimaryForegroundBrush}" BorderThickness="1">
+                    <local1:PlaceHolderTextBox Margin="20 0" Style="{DynamicResource SearchBox}" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Foreground="{DynamicResource PrimaryForegroundBrush}" BorderThickness="0"/>
                 </Border>
-                <Image Grid.Column="3" Style="{DynamicResource Search Icon}" Height="26"/>
+                <Image Grid.Column="2" Style="{DynamicResource Search Icon}" Height="26"/>
             </Grid>
         </Border>
         <ProgressBar Grid.Row="1" Height="50" Width="200" Foreground="blue" Value="{Binding ProgVal}" Visibility="{Binding ProgVis}" Background="LightBlue">
@@ -97,9 +97,9 @@
 
         <Grid Style="{DynamicResource BottomPanel}" Grid.Row="2">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" 
+                <!--<Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" 
                         Width="200" Content="История" Margin="0 0 40 0"
-                        Command="{Binding GoVid}"/>
+                        Command="{Binding GoVid}"/>-->
                 <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" 
                         Width="200" Content="Загрузить" Command="{Binding LoadNewFile}" Margin="0 0 40 0"/>
                 <Button Style="{DynamicResource ButtonOne}" Grid.Row="1" Height="40" 
